force-app/main/default/objects/Shipment/Shipment.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>