force-app/main/default/objects/Shipment/fields/DaysNotMoved__c.field-meta.xml
<CustomField>
    <fullName>DaysNotMoved__c</fullName>
    <label>Days Not Moved</label>
    <length>255</length>
    <type>Text</type>
</CustomField>