force-app/main/default/objects/Shipment/fields/DestinationFormula__c.field-meta.xml
<CustomField>
    <fullName>DestinationFormula__c</fullName>
    <formula>TEXT(PMC_CPQ_ShipToAccount__r.BillingStateCode) &amp; &apos;, &apos; &amp; PMC_CPQ_ShipToAccount__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DestinationFormula</label>
    <type>Text</type>
</CustomField>