force-app/main/default/objects/Shipment/fields/Insp_Lot_Usage_Decision__c.field-meta.xml
<CustomField>
    <fullName>Insp_Lot_Usage_Decision__c</fullName>
    <description>Insp. Lot Usage Decision</description>
    <inlineHelpText>Only CoA approved records must be displayed</inlineHelpText>
    <label>Insp. Lot Usage Decision</label>
    <length>10</length>
    <type>Text</type>
</CustomField>