force-app/main/default/objects/Shipment/fields/PMC_CPQ_AlternateSubstituteProduct__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_AlternateSubstituteProduct__c</fullName>
    <description>This field captures the alternate Substitute Product.</description>
    <label>Alternate/Substitute Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alternate Product</fullName>
            </value>
            <value>
                <fullName>Substitute Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>