force-app/main/default/objects/Shipment/fields/PMC_CPQ_Carrier__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Carrier__c</fullName>
    <label>Carrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>