force-app/main/default/objects/Shipment/fields/PMC_CPQ_Comments__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Comments__c</fullName>
    <label>COMMENTS</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>