force-app/main/default/objects/Shipment/fields/PMC_CPQ_ContractNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ContractNumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Number</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Deliveries</relationshipLabel>
    <relationshipName>Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>