force-app/main/default/objects/Shipment/fields/PMC_CPQ_CurrentCarrier__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_CurrentCarrier__c</fullName>
    <description>This is used in intellitrans integration</description>
    <label>Current Carrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>