force-app/main/default/objects/Shipment/fields/PMC_CPQ_CurrentCoordinates__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_CurrentCoordinates__c</fullName>
    <description>This field is used in intellitrans integration</description>
    <label>Current Coordinates</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>