force-app/main/default/objects/Shipment/fields/PMC_CPQ_DaysPastShipped__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DaysPastShipped__c</fullName>
    <formula>TODAY()  -  PMC_CPQ_ShippedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Past Shipped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>