force-app/main/default/objects/Shipment/fields/PMC_CPQ_DeliveryActualGIDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DeliveryActualGIDate__c</fullName>
    <description>Actual date when goods issued.</description>
    <label>Delivery Actual GI Date</label>
    <type>Date</type>
</CustomField>