force-app/main/default/objects/Shipment/fields/PMC_CPQ_DeliveryCreatedByName__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DeliveryCreatedByName__c</fullName>
    <description>This field captures the  user created the delivery in sap</description>
    <label>Delivery Created By Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>