force-app/main/default/objects/Shipment/fields/PMC_CPQ_DeliveryItemID__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DeliveryItemID__c</fullName>
    <description>This field captures the delivery Item ID.</description>
    <label>Delivery Item ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>