force-app/main/default/objects/Shipment/fields/PMC_CPQ_DeliveryItemName__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DeliveryItemName__c</fullName>
    <description>This field captures the delivery Item Name</description>
    <label>Delivery Item Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>