force-app/main/default/objects/Shipment/fields/PMC_CPQ_DeliveryPlannedGIDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DeliveryPlannedGIDate__c</fullName>
    <description>Planned date for good to be released.</description>
    <label>Delivery Planned GI Date</label>
    <type>Date</type>
</CustomField>