force-app/main/default/objects/Shipment/fields/PMC_CPQ_DeliveryPlannedvsActualGI__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DeliveryPlannedvsActualGI__c</fullName>
    <description>Difference between actual &amp; planned</description>
    <label>Delivery Planned vs Actual GI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>