force-app/main/default/objects/Shipment/fields/PMC_CPQ_DeliveryQuantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DeliveryQuantity__c</fullName>
    <description>This field captures the delivery Delivery Quantity.</description>
    <label>Delivery Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>