force-app/main/default/objects/Shipment/fields/PMC_CPQ_Destination__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Destination__c</fullName>
    <label>Destination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_CPQ_DestinationCountry</valueSetName>
    </valueSet>
</CustomField>