force-app/main/default/objects/Shipment/fields/PMC_CPQ_ETA__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ETA__c</fullName>
    <label>ETA</label>
    <type>Date</type>
</CustomField>