force-app/main/default/objects/Shipment/fields/PMC_CPQ_GoodsIssueStatus__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_GoodsIssueStatus__c</fullName>
    <description>The Status of goods issue.</description>
    <label>Goods Issue Status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>