force-app/main/default/objects/Shipment/fields/PMC_CPQ_LoadingDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_LoadingDate__c</fullName>
    <description>Date on which the goods are to be loaded.</description>
    <label>Loading Date</label>
    <type>Date</type>
</CustomField>