force-app/main/default/objects/Shipment/fields/PMC_CPQ_Order__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field captures the Order Number.</description>
    <label>Order Number</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Deliveries</relationshipLabel>
    <relationshipName>Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>