force-app/main/default/objects/Shipment/fields/PMC_CPQ_OrderDocument__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_OrderDocument__c</fullName>
    <description>This field captures the order PO etc.</description>
    <label>Order Document</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bill of Lading</fullName>
            </value>
            <value>
                <fullName>Certificate of Analysis</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>PO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>