force-app/main/default/objects/Shipment/fields/PMC_CPQ_OrderStatus__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_OrderStatus__c</fullName>
    <description>This field captures the Order status</description>
    <formula>TEXT(PMC_CPQ_Order__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Status</label>
    <type>Text</type>
</CustomField>