force-app/main/default/objects/Shipment/fields/PMC_CPQ_Origin__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Origin__c</fullName>
    <description>This field captures the origin .</description>
    <label>Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>