force-app/main/default/objects/Shipment/fields/PMC_CPQ_OriginLocation__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_OriginLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The plant location associated to this delivery</description>
    <label>Origin Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Deliveries</relationshipLabel>
    <relationshipName>Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>