force-app/main/default/objects/Shipment/fields/PMC_CPQ_PlantID__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PlantID__c</fullName>
    <description>This field captures the  Plant ID.</description>
    <label>Plant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>