force-app/main/default/objects/Shipment/fields/PMC_CPQ_PO__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PO__c</fullName>
    <description>This field is used to capture the user input for Purchase order number.</description>
    <label>Customer Purchase Order #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>