force-app/main/default/objects/Shipment/fields/PMC_CPQ_Product__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Deliveries</relationshipLabel>
    <relationshipName>Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>