force-app/main/default/objects/Shipment/fields/PMC_CPQ_Route__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Route__c</fullName>
    <label>Route</label>
    <length>128</length>
    <type>Text</type>
</CustomField>