force-app/main/default/objects/Shipment/fields/PMC_CPQ_SAPDeliveryID__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SAPDeliveryID__c</fullName>
    <description>This field captures the sap Delivery ID.</description>
    <externalId>true</externalId>
    <label>SAP Delivery ID</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>