force-app/main/default/objects/Shipment/fields/PMC_CPQ_ShippedDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ShippedDate__c</fullName>
    <description>This field captures the shipped  Date.</description>
    <label>Shipped Date</label>
    <type>Date</type>
</CustomField>