force-app/main/default/objects/Shipment/fields/PMC_CPQ_ShippingPoint__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ShippingPoint__c</fullName>
    <label>Shipping Point</label>
    <length>128</length>
    <type>Text</type>
</CustomField>