force-app/main/default/objects/Shipment/fields/PMC_CPQ_ShipToAccount__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ShipToAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deliveries (Ship To Account)</relationshipLabel>
    <relationshipName>Deliveries1</relationshipName>
    <type>Lookup</type>
</CustomField>