force-app/main/default/objects/Shipment/fields/PMC_CPQ_TowName__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_TowName__c</fullName>
    <label>Tow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>