force-app/main/default/objects/Shipment/fields/PMC_CPQ_TransportationPlanningDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_TransportationPlanningDate__c</fullName>
    <description>Date on which the transportation is planned.</description>
    <label>Transportation Planning Date</label>
    <type>Date</type>
</CustomField>