force-app/main/default/objects/Shipment/fields/PMC_CPQ_TruckNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_TruckNumber__c</fullName>
    <description>This field captures the Truck Number.</description>
    <label>Truck Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>