force-app/main/default/objects/Shipment/fields/PMC_CPQ_UoMUnitofMeasure__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_UoMUnitofMeasure__c</fullName>
    <description>This field captures the uom of Measure.</description>
    <inlineHelpText>Specify the unit in which the value of this field will be measured</inlineHelpText>
    <label>UoM Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_SS_UnitOfMeasure</valueSetName>
    </valueSet>
</CustomField>