force-app/main/default/objects/Shipment/fields/PMC_DH_SAPDeliveryCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_SAPDeliveryCreatedDate__c</fullName>
    <label>SAP Delivery Created Date</label>
    <type>Date</type>
</CustomField>