force-app/main/default/objects/Shipment/fields/Ship_To_City__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_City__c</fullName>
    <description>.</description>
    <formula>PMC_CPQ_ShipToAccount__r.ShippingCity</formula>
    <label>Ship To City</label>
    <type>Text</type>
</CustomField>