force-app/main/default/objects/Shipment/fields/Ship_To_Country__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Country__c</fullName>
    <description>.</description>
    <formula>PMC_CPQ_ShipToAccount__r.ShippingCountry</formula>
    <label>Ship To Country</label>
    <type>Text</type>
</CustomField>