force-app/main/default/objects/Shipment/fields/Ship_To_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Country_Code__c</fullName>
    <description>.</description>
    <formula>TEXT(PMC_CPQ_ShipToAccount__r.ShippingCountryCode)</formula>
    <label>Ship To Country Code</label>
    <type>Text</type>
</CustomField>