force-app/main/default/objects/Shipment/fields/Ship_To_State__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_State__c</fullName>
    <description>.</description>
    <formula>PMC_CPQ_ShipToAccount__r.ShippingState</formula>
    <label>Ship To State</label>
    <type>Text</type>
</CustomField>