force-app/main/default/objects/Shipment/fields/Ship_To_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_State_Code__c</fullName>
    <description>.</description>
    <formula>TEXT(PMC_CPQ_ShipToAccount__r.ShippingStateCode)</formula>
    <label>Ship To State Code</label>
    <type>Text</type>
</CustomField>