force-app/main/default/objects/Shipment/fields/Ship_To_Street__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Street__c</fullName>
    <description>.</description>
    <formula>PMC_CPQ_ShipToAccount__r.ShippingStreet</formula>
    <label>Ship To Street</label>
    <type>Text</type>
</CustomField>