force-app/main/default/objects/Shipment/recordTypes/FPD_Delivery.recordType-meta.xml
<RecordType>
    <fullName>FPD_Delivery</fullName>
    <active>true</active>
    <label>FPD Delivery</label>
</RecordType>