force-app/main/default/objects/Shipment/listViews/PMC_CPQ_AllDeliveries.listView-meta.xml
<ListView>
    <fullName>PMC_CPQ_AllDeliveries</fullName>
    <columns>Name</columns>
    <columns>DestinationLocation</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <label>All Deliveries</label>
</ListView>