force-app/main/default/objects/Shipment/listViews/PMC_CPQ_MyDeliveries.listView-meta.xml
<ListView>
    <fullName>PMC_CPQ_MyDeliveries</fullName>
    <columns>Name</columns>
    <columns>PMC_CPQ_Product__c</columns>
    <columns>PMC_CPQ_DeliveryStatus__c</columns>
    <columns>PMC_CPQ_Order__c</columns>
    <columns>PMC_CPQ_PO__c</columns>
    <columns>PMC_CPQ_ContractNumber__c</columns>
    <columns>PMC_CPQ_Account__c</columns>
    <columns>PMC_CPQ_VehicleID__c</columns>
    <columns>PMC_CPQ_ShippedDate__c</columns>
    <columns>PMC_CPQ_CurrentLocation__c</columns>
    <columns>DestinationLocation</columns>
    <columns>PMC_CPQ_ETA__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Deliveries</label>
</ListView>